# Sleepy_Engine

./: .gitignore  Compile_Copy_n_Run_Flask.bash  Compile_Copy_n_Run_Flask.bat  Compile_n_Copy.bash  Compile_n_Copy.bat  README.md  Run_Flask_App.bash  Run_Flask_App.bat  Run_Flask_App.cmd  Setup_Python_Environment.bash  Setup_Python_Environment.bat  TODO
flask_server/: __init__.py  base_dbs.py  new-project.sql
flask_server/static/base-files/: .gitignore  new-project.sqlite  objectConfig.json  objectScript.rhai  sceneConfig.json  sceneScript.rhai  stateConfig.json  stateScript.rhai  type.sqlite
flask_server/static/js/editor/: DOMcontrol.js  SQLcontrol.js  editor.js
flask_server/static/js/editor/DOMcontrol/: material.js  (+3 more)
flask_server/static/js/engine-core/: game_engine.js  game_engine_bg.wasm
flask_server/static/js/game-test/: game-test.js
flask_server/static/js/libs/: .gitignore  CodeMirror Fill Instructions.txt  Fill Instructions.txt  Library Fill Instructions.txt  README.md
flask_server/static/style/: editor.css
flask_server/templates/: editor.html  game-export.html  game-test.html
flaskr/: __init__.py  base_dbs.py  new-project.sql  type.sql
flaskr/static/base-files/: gameEntScript.lua  gameEntScript.rhai  new-project.sqlite  objectConfig.json  objectEntScript.lua  objectEntScript.rhai  projectConfig.json  sceneEntConfig.json  sceneEntScript.lua  sceneEntScript.rhai  sceneScript.rhai  spriteConfig.json  stateConfig.json  type.sqlite
flaskr/static/js/editor/: DOMcontrol-wrap.js  SQLcontrol.js  game-test.js  main.js
flaskr/static/style/: editor.css
flaskr/templates/: editor.html  game-test.html
game-engine/: Cargo.toml  load-game.js
game-engine/src/: game.rs  lib.rs
game-engine/src/game/: engine_api.rs  renderer.rs
game-engine/src/game/engine_api/: asset.rs
instance/: config.toml  data.sqlite  load-game.js
instance/Export Package/: game_engine.js  load-game.js
instance/game-engine/: Cargo.toml
instance/game-engine/src/: data.rs  game.rs  lib.rs  webapp.rs
instance/game-engine/src/game/: element.rs  engine_api.rs  entity.rs  renderer.rs  rhai_api.rs  rhai_convert.rs  scene.rs
instance/game-engine/src/game/engine_api/: asset.rs  element.rs
tests/: test.sqlite
(+13 files in other folders)
