[package]
name = "game-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
console_error_panic_hook = "0.1.7"

[dependencies.rhai]
version = "1.15.1"
features = [
  "wasm-bindgen",
  "f32_float",
  "no_time",
  "no_module",
  "no_custom_syntax"
]

[dependencies.web-sys]
version = "0.3.64"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlUniformLocation',
  'WebGlProgram',
  'WebGlShader',
  'Window',
  'console',
  'EventTarget',
  'KeyboardEvent',
]

